--- a/application.yml
+++ b/application.yml
@@ -10,3 +10,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  jwt:
+    secret: "oU+tr6/4CD6u3xBXVsoD9bwKEcNOiUKx2G1vzKPwKwg="
+    expirationMs: 3600000  # 1 hour
