--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=expense
-jwt.secret=oU+tr6/4CD6u3xBXVsoD9bwKEcNOiUKx2G1vzKPwKwg=
-jwt.expirationMs=3600000
+jwt.secret=${JWT_SECRET}
+jwt.expirationMs=${JWT_EXPIRATION_MS}
