--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=expense
+spring.application.name=expense-backend
 jwt.secret=${JWT_SECRET}
 jwt.expirationMs=${JWT_EXPIRATION_MS}
